fix(style): adding overflow:hidden to year/month chooser -> IE rendered wrong

--- a/src/css/datepickk.less
+++ b/src/css/datepickk.less
@@ -336,13 +336,12 @@
 		justify-content:space-between;
 		background-color: fade(#1B363F,90%);
 		height: 0;
-		opacity: 1;
+		overflow: hidden;
 		pointer-events: none;
 		transition: height .2s ease;
 
 		&.d-show{
 			height: 44px;
-			opacity: 1;
 			pointer-events: auto;
 		}
 
@@ -370,13 +369,12 @@
 		justify-content:space-between;
 		background-color: fade(#1B363F,90%);
 		height: 0;
-		opacity: 1;
+		overflow: hidden;
 		pointer-events: none;
 		transition: height .2s ease;
 
 		&.d-show{
 			height: 44px;
-			opacity: 1;
 			pointer-events: auto;
 		}
 
